<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_gray"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/title_my_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_page"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileCircleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="7dp"
            android:src="@drawable/profile_edit" />
        <TextView
            android:id="@+id/rankTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/profileCircleImageView"
            android:layout_marginBottom="10dp"
            android:text="@string/rank2"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/rankTextView"
            android:layout_below="@id/profileCircleImageView"
            android:src="@drawable/ic_help" />

        <EditText
            android:id="@+id/nickNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:layout_below="@+id/rankTextView"
            android:text="@string/nickName"
            android:textSize="15sp"
            android:background="@drawable/btn_background_02" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="1dp"
        android:layout_below="@id/relativeLayout2"
        android:background="@color/white">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/emailIconTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/emailTextView"
            android:text="@string/ic_email"
            android:textColor="@color/purple"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/emailIconTextView"
            android:layout_alignBaseline="@id/emailIconTextView"
            android:text="@string/user_email"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_marginBottom="35dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailIconTextView"
            android:layout_toEndOf="@id/passwordTextView"
            android:layout_alignStart="@id/emailIconTextView">
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:padding="10dp"
                android:textSize="13sp"
                android:background="@drawable/btn_background_01"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/change"
                android:padding="10dp"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:enabled="false"
                android:background="@drawable/btn_background_06"/>
        </LinearLayout>
        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextView"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/phone"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/phoneTextView"
            android:layout_below="@id/passwordTextView"
            android:layout_alignBaseline="@id/phoneTextView"
            android:text="@string/phone_detail"
            android:textSize="13sp"
            android:textColor="@color/light_gray"/>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/phoneTextView">
            <EditText
                android:id="@+id/mobileEditText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:inputType="number"
                android:text="@string/user_phone1"
                android:padding="10dp"
                android:textSize="13sp"
                android:background="@drawable/btn_background_01"/>
            <EditText
                android:id="@+id/mobileEditText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:inputType="number"
                android:text="@string/user_phone2"
                android:padding="10dp"
                android:textSize="13sp"
                android:background="@drawable/btn_background_01"/>
            <EditText
                android:id="@+id/mobileEditText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:inputType="number"
                android:text="@string/user_phone3"
                android:padding="10dp"
                android:textSize="13sp"
                android:background="@drawable/btn_background_01"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/re_certification"
                android:padding="10dp"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:enabled="false"
                android:background="@drawable/btn_background_06"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@id/relativeLayout3"
        android:background="@color/white">
        <TextView
            android:id="@+id/marketingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/marketing"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/marketingDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/marketingTextView"
            android:layout_marginBottom="20dp"
            android:text="@string/marketing_detail"
            android:textSize="13sp"
            android:textColor="@color/light_gray" />
        <TextView
            android:id="@+id/mailConsentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/marketingDetailTextView"
            android:layout_marginBottom="22dp"
            android:text="@string/mail"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <com.suke.widget.SwitchButton
            android:id="@+id/mailSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/marketingDetailTextView"
            app:sb_checked="true"
            app:sb_show_indicator="false"
            app:sb_checked_color="@color/colorPrimary" />
        <TextView
            android:id="@+id/smsConsentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mailConsentTextView"
            android:layout_alignBaseline="@id/smsSwitchButton"
            android:text="@string/sms"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <com.suke.widget.SwitchButton
            android:id="@+id/smsSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/mailSwitchButton"
            app:sb_show_indicator="false"
            app:sb_checked_color="@color/colorPrimary" />
        <TextView
            android:id="@+id/withdrawalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/withdrawal"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/logoutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/withdrawalTextView"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>