<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/storeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:drawableEndCompat="@drawable/ic_right_arrow"
        app:drawableTint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:layout_marginBottom="15dp">
        <RatingBar
            android:id="@+id/reviewRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="?android:attr/ratingBarStyleSmall"
            android:theme="@style/RatingBar"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"/>
        <TextView
            android:id="@+id/reviewDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_date" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/reviewModifyButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:padding="7dp"
            android:minHeight="10dp"
            android:text="@string/modify"
            android:textSize="16sp"
            android:background="@drawable/btn_background_05" />
        <Button
            android:id="@+id/reviewDeleteButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="7dp"
            android:minHeight="10dp"
            android:text="@string/delete"
            android:textSize="16sp"
            android:background="@drawable/btn_background_05" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ad_background_01"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">
        <ImageView
            android:id="@+id/reviewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/review_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reviewContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/review_content"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/reviewCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_only2"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:theme="@style/CheckBox"/>

</LinearLayout>